--- a/cover.css
+++ b/cover.css
@@ -33,7 +33,7 @@ html, body {
 }
 
 .masthead {
-  margin-top: 3rem;
+  margin-top: 0rem;
   margin-bottom: 0rem;
 }
 
@@ -133,3 +133,37 @@ html, body {
   bottom: 0;
   left: 37%;
 }
+
+.name_intro {
+  display: flex;
+  justify-content: center;
+}
+
+
+
+.line-devices5 {animation:line-devices5 4s -2s infinite; stroke-dasharray: 240; stroke-dashoffset: 240;}
+@keyframes line-devices5 {
+    20%{stroke-dashoffset: 240;}
+    60%{stroke-dashoffset: 0;}
+    100%{stroke-dashoffset: 0;}
+}
+@media (prefers-reduced-motion: reduce) {
+    .line-devices5 {
+        animation: none;
+    }
+}
+
+.line-movie-reel1 {
+  animation:line-movie-reel1 2s linear infinite; transform-origin: 49.5px 50.5px;
+}
+
+@keyframes line-movie-reel1 {
+    100%{transform: rotate(360deg);}
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .line-movie-reel1 {
+        animation: none;
+    }
+}
+
