--- a/cover.css
+++ b/cover.css
@@ -1,99 +1,17 @@
 
-a, a:focus, a:hover {
+/* a, a:focus, a:hover {
   color: #fff;
-}
-
-.btn-secondary, .btn-secondary:hover, .btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
-}
-
-html, body {
-  height: 100%;
-  background-color: #333;
-}
-
-.card-body {
-  display: -ms-flexbox;
-  display: flex;
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
-.cover-container {
-  max-width: 60em;
-}
-
-#svg {
-  margin-bottom: 10rem;
-  margin-top: -15rem;
-}
-
-.masthead {
-  margin-top: 0rem;
-  margin-bottom: 0rem;
-}
-
-.masthead-brand {
-  margin-top: 0rem;
+} */
+* {
+  margin:0;
   padding:0;
 }
 
-.nav-masthead .nav-link {
-  padding: .1rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
-  }
-  .nav-masthead {
-    float: right;
-  }
-}
-
-.cover {
-  padding: 0 1.5rem;
-}
-
-.cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
-}
-
-.mastfoot {
-  color: rgba(255, 255, 255, .5);
-}
-
-.card{
-  background-color: #333;
-  margin: 1rem;
-}
-
-#terminal {
-  position: 0, 0;
-  color: rgba(255, 255, 255, .5);
+body {
+  display: grid;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(255, 254, 254);
 }
 
 #console_text_1, #console_text_2, #console_text_3, #console_text_4, #console_text_5 {
@@ -104,53 +22,38 @@ html, body {
   font-size: x-large;
 }
 
-.logo_container {
-  text-align:center;
-  padding: 3em 0;
-}
+/* #animated_string{
+  flex: 100%;
+  flex: 100%;
+} */
 
-.row_container {
-  display: flex;
-  justify-content: center;
-}
-
-.row_container > div {
-  margin:50px;
-  flex: 1 1 100%;
-}
-
-.logo_container_1 {
-  display: inline-block;
-  position: relative;
-  text-align:center;
-  padding: 3em 0;
-}
-
-.logo_container_1 > :first-child ~ * {
+.logo_container > :first-child ~ * {
   position: absolute;
-  top: 40%;
+  top: 30%;
   right: 0;
   bottom: 0;
-  left: 37%;
+  left: 43%;
 }
 
-.name_intro {
-  display: flex;
-  justify-content: center;
+.links {
+  margin-top: 50px;
 }
 
-
+/* #button_description {
+  padding: 0;
+  margin: 0%;
+} */
 
 .line-devices5 {animation:line-devices5 4s -2s infinite; stroke-dasharray: 240; stroke-dashoffset: 240;}
 @keyframes line-devices5 {
-    20%{stroke-dashoffset: 240;}
-    60%{stroke-dashoffset: 0;}
-    100%{stroke-dashoffset: 0;}
+  20%{stroke-dashoffset: 240;}
+  60%{stroke-dashoffset: 0;}
+  100%{stroke-dashoffset: 0;}
 }
 @media (prefers-reduced-motion: reduce) {
-    .line-devices5 {
-        animation: none;
-    }
+  .line-devices5 {
+    animation: none;
+  }
 }
 
 .line-movie-reel1 {
@@ -158,16 +61,121 @@ html, body {
 }
 
 @keyframes line-movie-reel1 {
-    100%{transform: rotate(360deg);}
+  100%{transform: rotate(360deg);}
 }
 
 @media (prefers-reduced-motion: reduce) {
-    .line-movie-reel1 {
-        animation: none;
-    }
+  .line-movie-reel1 {
+    animation: none;
+  }
 }
 
-#button_description {
-
+/* This only changes this particular animation duration */
+.animate__animated.animate__bounce {
+  --animate-duration: 2s;
 }
 
+/* This changes all the animations globally */
+:root {
+  --animate-duration: 800ms;
+  --animate-delay: 0.9s;
+}
+
+
+/* .btn-secondary, .btn-secondary:hover, .btn-secondary:focus {
+  color: #333;
+  text-shadow: none; 
+  background-color: #fff;
+  border: .05rem solid #fff;
+} */
+
+/* .name_intro {
+  display: flex;
+  justify-content: center;
+} */
+
+/* html {
+  height: 100%;
+  background-color: #333;
+} */
+
+/* .card-body {
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+} */
+
+/* .cover-container {
+  max-width: 60em;
+} */
+
+/* #svg {
+  margin-bottom: 10rem;
+  margin-top: -15rem;
+} */
+
+/* .masthead {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+} */
+
+/* .masthead-brand {
+  margin-top: 0rem;
+  padding:0;
+} */
+
+/* .nav-masthead .nav-link {
+  padding: .1rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, .5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+} */
+
+/* .nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+} */
+
+/* .nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+} */
+
+/* .nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+} */
+
+/* @media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+} */
+
+/* .cover {
+  padding: 0 1.5rem;
+} */
+/* 
+.cover .btn-lg {
+  padding: .75rem 1.25rem;
+  font-weight: 700;
+} */
+/* 
+.mastfoot {
+  color: rgba(255, 255, 255, .5);
+} */
+
+/* .card{
+  background-color: #333;
+  margin: 1rem;
+} */
+
+/* #terminal {
+  position: 0, 0;
+  color: rgba(255, 255, 255, .5);
+} */
