--- a/cover.css
+++ b/cover.css
@@ -114,6 +114,17 @@ main {
 
 #terminal {
   margin-bottom: 50px;
+  border-radius: 5px;
+  width: 25%;
+  position: absolute;
+  top: 43%;
+  left:0;
+  z-index:1;
+  bottom:0;
+  right:0;
+  height:25%;
+  background-color: black;
+  display: none;
 }
 
 /* .btn-secondary, .btn-secondary:hover, .btn-secondary:focus {
