--- a/cover.css
+++ b/cover.css
@@ -5,7 +5,10 @@ a, a:focus, a:hover {
 
 html {
   height: 100%;
+  
+  /* justify-content: center; */
 }
+
 
 #junk {
   text-align: center;
@@ -16,6 +19,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: white;
+  justify-content: center;
 }
 
 main {
@@ -108,23 +112,41 @@ main {
   padding-top: 60px;
 }
 
-#computer {
+/* #computer {
   margin-bottom: 50px;
+} */
+
+.terminal_class {
+  margin-bottom: 50px;
+  position: absolute;
+  z-index:1;
+  bottom:20em;
+  min-width: 220px;
+  max-width: 220px;
+  max-height: 130px;
+  min-height: 130px;
+  left: 0;
 }
 
 #terminal {
-  margin-bottom: 50px;
-  border-radius: 5px;
-  width: 25%;
-  position: absolute;
-  top: 43%;
-  left:0;
-  z-index:1;
-  bottom:0;
-  right:0;
-  height:25%;
-  background-color: black;
   display: none;
+
+
+}
+
+#wrapper {
+  height: 100%;
+  min-width: 800px;
+  max-width: 800px;
+}
+
+.mac {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  /* font-size:1vw; */
+  min-width: 800px;
+  max-width: 800px;
 }
 
 /* .btn-secondary, .btn-secondary:hover, .btn-secondary:focus {
