--- a/cover.css
+++ b/cover.css
@@ -5,10 +5,14 @@ a, a:focus, a:hover {
 
 html {
   height: 100%;
+  min-width: 1030px;
   
   /* justify-content: center; */
 }
 
+#about {
+  min-width: 800px;
+}
 
 #junk {
   text-align: center;
@@ -18,6 +22,7 @@ body {
   display: grid;
   height: 100%;
   width: 100%;
+  min-width: 1000px;
   background-color: white;
   justify-content: center;
 }
@@ -108,6 +113,10 @@ main {
   background-color: white;
 }
 
+.icon {
+  min-width: 40px;
+}
+
 .sticky + .content {
   padding-top: 60px;
 }
@@ -125,6 +134,8 @@ main {
   max-width: 220px;
   max-height: 130px;
   min-height: 130px;
+  /* height: 130px;
+  width: 220px; */
   left: 0;
 }
 
@@ -136,8 +147,9 @@ main {
 
 #wrapper {
   height: 100%;
-  min-width: 800px;
-  max-width: 800px;
+  /* min-width: 800px;
+  max-width: 800px; */
+  width: 800px;
 }
 
 .mac {
