--- a/cover.css
+++ b/cover.css
@@ -117,6 +117,13 @@ main {
   min-width: 40px;
 }
 
+#third_icon {
+  padding-top: 0px;
+  background-color: transparent;
+  border-radius: 30px;
+  opacity: 100%;
+}
+
 .sticky + .content {
   padding-top: 60px;
 }
@@ -139,8 +146,16 @@ main {
   left: 0;
 }
 
+#content_box {
+  visibility: hidden;
+}
+
+#content_row {
+  height: 1070px;
+}
+
 #terminal {
-  display: none;
+  visibility: hidden;
 
 
 }
