--- a/cover.css
+++ b/cover.css
@@ -105,6 +105,7 @@ main {
   overflow: hidden;
   background-color: transparent;
   padding-top: 100px;
+  z-index: 3;
 }
 
 .icon {
@@ -151,7 +152,7 @@ main {
   height: 30%;
   position: absolute;
   z-index: 2;
-  width: 25%;
+  width: 27%;
   top: 44%;
   left: 36%;
 }
@@ -167,10 +168,16 @@ main {
 
 #canv {
   background-color: transparent;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  visibility: visible;
+  /* z-index: 1; */
 }
 
 #whale {
   height: 99.5%;
   width: 100%;
   position: fixed;
+  z-index: 0;
   }
